welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:8: error: not found: type int
def move(nbPas:int, versLAvant:boolean):int ={
                                        ^Program:8: error: not found: type int
def move(nbPas:int, versLAvant:boolean):int ={
               ^Program:8: error: not found: type boolean
def move(nbPas:int, versLAvant:boolean):int ={
                               ^Program:9: error: not found: value verLAvant
	if (verLAvant==true) {
            ^